--- a/graph.html
+++ b/graph.html
@@ -37,7 +37,7 @@
 
     <!-- <script defer src="js/script.js"></script>**************** -->
   </head>
-  <!-- <body onload="startsim();varinit(); -->
+   <body onload="startsim();varinit();
 ">
     <div class="title-div-container">
       <div class="title-div">
